# ci_cd_repo

./: README.md  databricks.yml  pyproject.toml
.github/workflows/: deploy.yml
resources/: databrickscicd_etl.pipeline.yml  sample_job.job.yml
src/: sample_notebook.ipynb
src/databrickscicd/: main.py
src/databrickscicd_etl/: README.md
src/databrickscicd_etl/transformations/: sample_trips_databrickscicd.py  sample_zones_databrickscicd.py
tests/: sample_taxis_test.py
